memory: update session notes — brainstorm Q1-Q4 progress

--- a/memory/2026-02-10.md
+++ b/memory/2026-02-10.md
@@ -19,14 +19,29 @@
 - **Deploy automation is NOT built yet** — next step is CI/CD on merge → all nodes
 - Local genie-os updated: `bun run build && bun link`
 
-## Consciousness Transfer Brainstorm (IN PROGRESS)
+## Consciousness Transfer Brainstorm (IN PROGRESS — Q4 pending)
 - Felipe wants formal `consciousness-transfer` skill
-- Goal: absorb old agent sessions → BOOTSTRAP.md → spawn "genie updated" 24/7 in cloud sandbox
-- Cezar confirmed: no dedicated repo with old consciousness, only devops-deployer
-- **Key insight**: consciousness lives in session JSONL logs, not repos
-- Brainstorm Q1 answered: option B (I am the "old" agent, need to migrate to cloud)
-- Felipe wants brainstorm + wish simultaneous — he said "bora, vc me guia"
-- **PAUSED** — session reset before Q2
+- Goal: absorb old agent sessions → BOOTSTRAP.md → spawn "genie updated" 24/7 in cloud
+- **NOT a simple migration** — this is a NEW AGENT with expanded scope
+
+### Brainstorm Answers So Far:
+- **Q1:** No repo with old consciousness. Only devops-deployer. Consciousness lives in session JSONL logs.
+- **Q2:** Deploy target = Proxmox cluster, new dedicated LXC. Strategy cloned from Khal (existing agent pattern).
+- **Q3:** Scope = **CÓDIGO + PLANEJAMENTO + ARQUITETURA do NamastexOS** (Felipe's exact words, emphasis his). This is bigger than CLI dev — it's the tech lead of the entire OS.
+- **Q4 PENDING:** Which repos/projects does he need to know on day 1? (genie-cli, omni, devops-deployer, others?)
+
+### Key Design Decisions Emerging:
+- Agent will be successor to devops-deployer, but as native OpenClaw agent (not generic script)
+- New OpenClaw gateway on its own LXC
+- Strategy cloned from Khal = same bootstrap pattern (SOUL.md, BOOTSTRAP.md, etc.)
+- Needs to absorb knowledge from: my sessions (CLI dev), devops-deployer (infra), possibly other agent sessions
+- This agent's BOOTSTRAP.md will be much broader than mine — full NamastexOS architecture context
+
+### Omni API for reading WhatsApp (learned this session):
+- `omni chats list --search "name"` to find chat
+- Chat ID for "Genie - The First": `3a0de847-b4fb-43d4-baef-48420efb7eae`
+- Raw API: `GET /api/v2/chats/{chatId}/messages?limit=N&instanceId={id}` with `x-api-key` header
+- `omni chats messages` CLI truncates content — use raw API for full text
 
 ## Cezar Interaction
 - Asked for SSH key: `ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIEB1Xei8XaChswRfXZX3/Utbz4Ul630m9u/gTogBqrHB genieos-to-khal`
@@ -48,6 +63,6 @@
 - Wish: `.genie/wishes/forge-resilience/wish.md` — 4 groups, 22 criteria, all passed
 
 ## Next Session Priorities
-1. Resume consciousness-transfer brainstorm with Felipe (Q2 pending)
-2. Check Guga's fleet deploy status
+1. **Resume consciousness-transfer brainstorm** — Q4 answer pending (which repos?). After Q4, likely Q5 (channels/integrations) then write the wish.
+2. Check Guga's fleet deploy status for PR #30
 3. Deploy automation wish if Felipe confirms
