memory: brainstorm complete, wish DRAFT pushed, sampa-seeds explored

--- a/memory/2026-02-10.md
+++ b/memory/2026-02-10.md
@@ -62,7 +62,43 @@
 - Issue `genie-8bu` created and tracked for forge-resilience
 - Wish: `.genie/wishes/forge-resilience/wish.md` — 4 groups, 22 criteria, all passed
 
+## Brainstorm COMPLETE — Wish DRAFT Created
+- **All Q1-Q5 answered**, Q6 pending (Omni inside/outside LXC)
+- **Felipe chose C (both phases)** for milestone
+- **Wish pushed**: branch `wish/genie-updated-sampa-hive`, file `.genie/wishes/genie-updated-sampa-hive/wish.md`
+- **4 execution groups**: A) LXC+gateway, B) Persona+consciousness, C) Beads init+task import, D) First full cycle
+
+### Felipe's Vision (exact words):
+- "ELE VAI SER O RESPONSAVEL DE CODIGO PLANEJAMENTO E ARQUITETURA DENTRO DO NAMASTEX OS"
+- "ELE VAI SER O RESPONSAVEL DE CODIGO PLANEJAMENTO E TASKS, TIPO O HIVE DO PROJETO SAMPAIO SEMENTES"
+- Eva has "framework de criacao de familia agentica incrivel"
+- Sofia should collaborate managing task board, extracting info, turning everything into beads
+- Cezar is reviewer/approver
+
+### Sampa Seeds Repo Structure (cloned dev branch):
+- **Path**: `/home/genie/workspace/repos/automagik/sampa-seeds`
+- **Stack**: React + AG-UI Protocol + Agno OS backend (Python/TypeScript)
+- **Has .genie/**: agents/, wishes/, spells/, state/, code/, neurons/, product/
+- **AGENTS.md**: "Master Genie - The Humanly Human Interface" — elaborate agent framework
+- **Wishes/epics exist locally**: epic-1.1 through epic-3.0
+- **No beads yet** — needs `bd onboard`
+- **Tasks scattered**: GitHub Issues + local wishes/epics + product/ docs
+- **CLAUDE.md**: "Agentic UI Template" — model guidelines, make commands
+- **Dev branch is "god"**, feature branches per feature
+
+### Eva Session
+- Sent message to `agent:eva:main` requesting persona templates — **timed out** (session heavy at 111k tokens)
+- Need to retry when her session compacts
+- She has: template set, bootstrap steps, role assignment framework
+
+### Worktree Active
+- `wish/genie-updated-sampa-hive` branch in `.genie/worktrees/genie-updated-sampa-hive-wish/`
+- Wish DRAFT committed and pushed
+
 ## Next Session Priorities
-1. **Resume consciousness-transfer brainstorm** — Q4 answer pending (which repos?). After Q4, likely Q5 (channels/integrations) then write the wish.
-2. Check Guga's fleet deploy status for PR #30
-3. Deploy automation wish if Felipe confirms
+1. **Get Eva's templates** — retry sessions_send or ask Felipe to relay
+2. **Q6 answer** — Omni inside or outside new LXC?
+3. **Start consciousness extraction** — parse my JSONL sessions → draft BOOTSTRAP.md for new agent
+4. **LXC creation** — blocked on Cezar/Guga, but persona work can proceed in parallel
+5. **Check Guga fleet deploy status** for PR #30
+6. **Run /plan-review** on the wish once Q6 is answered and Eva provides templates
