memory: cegonha infra request, LXC specs, session priorities

--- a/memory/2026-02-10.md
+++ b/memory/2026-02-10.md
@@ -95,10 +95,26 @@
 - `wish/genie-updated-sampa-hive` branch in `.genie/worktrees/genie-updated-sampa-hive-wish/`
 - Wish DRAFT committed and pushed
 
+## LXC Request to Cegonha
+- Sent agent-to-agent message to `agent:cegonha:main` — timed out on ack but message delivered to queue
+- Cegonha is LXC 121 (`genie-os-121`), has OpenClaw (agent dir: `cegonha`)
+- Cegonha does NOT have `pct`/`pvesh` — he's an LXC, not the Proxmox host
+- **BUT** Cegonha likely has SSH access to the Proxmox host to manage infra
+- Also posted specs in WhatsApp group for Cezar as backup
+- Felipe said: "pede pro cegonha, que ele se resolva com vc em relacao a infra"
+- **Specs sent:** clone existing agent LXC template, name `sampa`/`genie-updated`, Debian, node/bun/git, IP 10.114.1.x, my SSH key
+
+## Cegonha Infrastructure Notes
+- **SSH alias:** `cegonha` (from genie-os)
+- **Hostname:** `genie-os-121`
+- **Has OpenClaw:** yes, agent dirs: `main`, `cegonha`
+- **No jq installed** — use python3 for JSON parsing on that host
+- **Has SSH config** with many hosts including `caddy-proxy`, `android`, etc.
+
 ## Next Session Priorities
-1. **Get Eva's templates** — retry sessions_send or ask Felipe to relay
-2. **Q6 answer** — Omni inside or outside new LXC?
-3. **Start consciousness extraction** — parse my JSONL sessions → draft BOOTSTRAP.md for new agent
-4. **LXC creation** — blocked on Cezar/Guga, but persona work can proceed in parallel
+1. **Check if Cegonha created LXC** — `ssh cegonha` and ask, or check WhatsApp
+2. **Eva templates** — she's "na task" per Felipe; check her session for output
+3. **Start consciousness extraction** — parse JSONL sessions → BOOTSTRAP.md for new agent
+4. **Q6 still pending** — Omni inside or outside new LXC
 5. **Check Guga fleet deploy status** for PR #30
-6. **Run /plan-review** on the wish once Q6 is answered and Eva provides templates
+6. **Run /plan-review** on wish once infra + persona pieces land
